# bm_pirna

./: .gitignore  LICENSE  Makefile  README.md  pixi.toml  pyproject.toml
.windsurf/rules/: code-style-guide.md
R_scripts/: 00_build_orgdb.R  01_sig_splicing_annotate.R  02_pirna_gene_psi_dotplot.R  03_go_kegg_enrichment.R  04_deseq2_go_kegg_enrichment.R  05_te_rpm_visualization.R  README.md
R_scripts/smRNA-seq/: mirtrace_length_distribution.R  piRNA_length_distribution.R  piRNA_nt_distribution.R  td-piRNA_scatter_plot.R  transposon_scatter_plot.R
bm_pirna/: __init__.py  dataset.py  extract_gene_info.py  features.py  plot_aa_composition.py  plots.py
bm_pirna/modeling/: predict.py  train.py
bm_pirna/smrna_seq/: __init__.py  align.py  filter.py  pirna_match.py  pirna_rpm.py  qc.py  rename.py  stats.py  transposon_rpm.py
bm_pirna/utils/: __init__.py  run_cmd.py
notebooks/: bm_pirna_rna-seq.ipynb  bm_pirna_smrna-seq.ipynb
workflow/rnasplicing/: README.md  Snakefile  config.json  env.yml
workflow/rnasplicing/scripts/: README.md  README.zh.md  analyze_clusters.py  calc_tpm.py  group_files.py  summarize_splicing.py
