[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bm_pirna"
version = "0.0.1"
description = "The purpose of this project is to analyze genes related to piRNA synthesis that were identified by screening a whole-genome library of the silkworm, with the aim of elucidating a comprehensive view of piRNA synthesis in the silkworm."
authors = [
  { name = "Yongkang Guo" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["bm_pirna"]
include = ["pyproject.toml", "bm_pirna/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["bm_pirna"]
force-sort-within-sections = true

